--- a/frontend/index.html
+++ b/frontend/index.html
@@ -40,7 +40,7 @@
         <div class="container">
             <div class="logo">
                 <span class="logo-icon">H</span>
-                <span class="logo-text">HEPECO<span class="logo-highlight">Digital</span></span>
+                <span class="logo-text">HEPECO<span class="logo-highlight">Digitals</span></span>
                 <span class="security-tag">
                     <i class="fas fa-shield-alt"></i>
                     <span>Secure</span>
